# attr

./: .gitignore  Makefile  Makefile.am  Makepkgs  README  VERSION  configure.ac  exports  libattr.pc.in  xattr.conf
CVE/: CVE-2026-54371.json  CVE-2026-54371.txt
attr/: attr.c
doc/: CHANGES  INSTALL  Makemodule.am  PORTING
examples/: Makefile  copyattr.c
getfattr/: getfattr.c
include/: Makemodule.am  attributes.h  builddefs.in  buildmacros  libattr.h  misc.h  old_walk_tree.h  openat2.h  visibility-hidden.h  walk_tree.h  xattrat.h  xattrat_compat.h
libattr/: Makemodule.am  attr_copy_action.c  attr_copy_check.c  attr_copy_fd.c  attr_copy_file.c  getxattrat.c  libattr.c  listxattrat.c  removexattrat.c  setxattrat.c  syscalls.c
libmisc/: Makemodule.am  getxattrat_compat.c  listxattrat_compat.c  old_walk_tree.c  openat2.c  proc-self-fd.c  proc-self-fd.h  removexattrat_compat.c  setxattrat_compat.c  walk_tree.c  xattrat.c
m4/: package_utilies.m4
man/: Makemodule.am
man/man1/: attr.1  getfattr.1  setfattr.1
man/man3/: attr_get.3  attr_list.3  attr_multi.3  attr_remove.3  attr_set.3
package/: Makefile
po/: LINGUAS  cs.po  de.po  es.po  fr.po  gl.po  ka.po  nl.po  pl.po  sv.po  update-potfiles
test/: Makemodule.am  attr.run  attr.test  restore.run  run  sort-getfattr-output
test/root/: getfattr.run  getfattr.test
tools/: Makemodule.am  attr.c  getfattr.c  setfattr.c
